--- a/book.toml
+++ b/book.toml
@@ -1,6 +1,13 @@
 [book]
+title = "Cheatsheets Zami3l"
+description = "The little cheatsheets for Sys/Net/Sec Admin"
 authors = ["zami3l"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Cheatsheets"
+
+[output.html]
+preferred-dark-theme = "ayu"
+default-theme = "dark"
+git-repository-url = "https://github.com/Zami3l/cheatsheets"
+git-repository-icon = "fa-github"
