--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,8 @@ nav:
           - Upgrade System & Packages: system-management/freebsd/update-upgrade-system-packages.md
           - Setup disk: system-management/freebsd/setup-freebsd-disk.md
           - Use Port Collections: system-management/freebsd/ports-collection.md
+      - OpenBSD:
+          - Install file sets: system-management/openbsd/install-sets.md
       - Install:
           - Install OpenBSD on APU4D4: system-management/install/install-openbsd-apu4d4.md
           - Install ArchLinux: system-management/install/install-archlinux.md
@@ -68,6 +70,7 @@ nav:
       - Install Apache on FreeBSD: web/install-freebsd-apache.md
       - Install Gitea on FreeBSD: web/install-freebsd-gitea.md
       - Install rTorrent on OpenBSD: web/install-openbsd-rtorrent.md
+      - Install Nginx on OpenBSD: web/install-openbsd-nginx.md
 
 # ----------------------------------------------
 # THEME
