--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,7 @@ nav:
       - SSL:
           - Diffie Hellman.md: security/ssl/diffie-hellman.md
           - Use CerBot: security/ssl/use-certbot.md
+          - Create CA and CERT: security/ssl/create-ca-crt.md
       - Tools:
           - Firefox privacy plugins: security/tools/firefox-privacy-plugins.md
       - U2F:
