--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ site_url: https://wiki.zami3l.com
 # ----------------------------------------------
 nav:
   - Databases:
-      - Install MariaDB on FreeBSD: databases/install-freebsd-mariadb.md
+      - In construction: databases/README.md
   - Jails:
       - In construction: jails/README.md
   - Misc:
@@ -51,9 +51,14 @@ nav:
       - FreeBSD:
           - Upgrade System & Packages: system-management/freebsd/update-upgrade-system-packages.md
           - Setup disk: system-management/freebsd/setup-freebsd-disk.md
+          - Setup Apache: system-management/freebsd/setup-apache.md
+          - Setup MariaDB: system-management/freebsd/setup-mariadb.md
+          - Setup Gitea: system-management/freebsd/setup-gitea.md
           - Use Port Collections: system-management/freebsd/ports-collection.md
       - OpenBSD:
           - Install file sets: system-management/openbsd/install-sets.md
+          - Setup Nginx: system-management/openbsd/setup-nginx.md
+          - Setup rTorrent: system-management/openbsd/setup-rtorrent.md
       - Install:
           - Install OpenBSD on APU4D4: system-management/install/install-openbsd-apu4d4.md
           - Install ArchLinux: system-management/install/install-archlinux.md
@@ -70,10 +75,7 @@ nav:
       - kvm:
           - Install KVM on ArchLinux: virtualization/kvm/install-archlinux-kvm.md
   - Web:
-      - Install Apache on FreeBSD: web/install-freebsd-apache.md
-      - Install Gitea on FreeBSD: web/install-freebsd-gitea.md
-      - Install rTorrent on OpenBSD: web/install-openbsd-rtorrent.md
-      - Install Nginx on OpenBSD: web/install-openbsd-nginx.md
+      - In construction: web/README.md
 
 # ----------------------------------------------
 # THEME
