--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,9 +16,6 @@ nav:
         - Docker: archlinux/install/docker.md
         - KVM: archlinux/install/kvm.md
         - Metasploit: archlinux/install/metasploit.md
-    - VoidLinux:
-      - System Management:
-        - Enable socklog: voidlinux/system-management/enable-socklog.md
   - OpenBSD:
     - System Management:
       - Install on APU4D4: openbsd/system-management/apu4d4.md
@@ -81,6 +78,8 @@ nav:
       - Create CA / Cert: howto/ssl/create-ca-crt.md
       - OpenSSL: howto/ssl/openssl.md
       - Diffie Hellman: howto/ssl/diffie-hellman.md
+    - Database:
+      - PostgreSQL Replication: howto/database/replication-postgresql.md
     - Pentest:
       - John bruteforce shadow: howto/pentest/john-bruteforce-shadow.md
   - Troubleshooting:
