--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,13 +8,17 @@ site_url: https://wiki.zami3l.com
 # NAVIGATION
 # ----------------------------------------------
 nav:
-  - ArchLinux:
-    - System Management:
-      - Install OS: archlinux/system-management/install.md
-    - Install:
-      - Docker: archlinux/install/docker.md
-      - KVM: archlinux/install/kvm.md
-      - Metasploit: archlinux/install/metasploit.md
+  - GNU/Linux:
+    - ArchLinux:
+      - System Management:
+        - Install ArchLinux: archlinux/system-management/install.md
+      - Install:
+        - Docker: archlinux/install/docker.md
+        - KVM: archlinux/install/kvm.md
+        - Metasploit: archlinux/install/metasploit.md
+    - VoidLinux:
+      - System Management:
+        - Enable socklog: voidlinux/system-management/enable-socklog.md
   - OpenBSD:
     - System Management:
       - Install on APU4D4: openbsd/system-management/apu4d4.md
