--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,14 +8,13 @@ site_url: https://wiki.netunix.net
 # NAVIGATION
 # ----------------------------------------------
 nav:
-  - GNU/Linux:
-    - ArchLinux:
-      - System Management:
-        - Install ArchLinux: archlinux/system-management/install.md
-      - Install:
-        - Docker: archlinux/install/docker.md
-        - KVM: archlinux/install/kvm.md
-        - Metasploit: archlinux/install/metasploit.md
+  - ArchLinux:
+    - System Management:
+      - Install ArchLinux: archlinux/system-management/install.md
+    - Install:
+      - Docker: archlinux/install/docker.md
+      - KVM: archlinux/install/kvm.md
+      - Metasploit: archlinux/install/metasploit.md
   - OpenBSD:
     - System Management:
       - Install on APU4D4: openbsd/system-management/apu4d4.md
@@ -70,6 +69,8 @@ nav:
       - Pushing Multiple: howto/git/pushing-multiple.md
       - Setup Git: howto/git/setup-git.md
       - Branch: howto/git/branch.md
+    - Mail:
+      - Sieve: howto/mail/sieve.md
     - Misc:
       - WeeChat: howto/misc/weechat.md
       - Custom WeeChat: howto/misc/custom-weechat.md
