build(domain): change domain

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 # ----------------------------------------------
 # GLOBAL
 # ----------------------------------------------
-site_name: Wiki Zami3l
-site_url: https://wiki.zami3l.com
+site_name: Wiki NetUnix
+site_url: https://wiki.netunix.net
 
 # ----------------------------------------------
 # NAVIGATION
