--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ nav:
       - MariaDB: freebsd/install/mariadb.md
     - Bastille:
       - Install: freebsd/bastille/install.md
+      - Basic commands: freebsd/bastille/howto.md
     - Setup:
       - Wireguard with Mullvad: freebsd/setup/wireguard-mullvad.md
   - HowTo:
