--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,13 +8,13 @@ site_url: https://wiki.netunix.net
 # NAVIGATION
 # ----------------------------------------------
 nav:
-  - ArchLinux:
+  - GNU/Linux:
     - System Management:
-      - Install ArchLinux: archlinux/system-management/install.md
+      - Install ArchLinux: linux/system-management/install-arch.md
+      - Resize disk and part: linux/system-management/resize-disk-part.md
     - Install:
-      - Docker: archlinux/install/docker.md
-      - KVM: archlinux/install/kvm.md
-      - Metasploit: archlinux/install/metasploit.md
+      - Docker: linux/install/docker.md
+      - KVM: linux/install/kvm.md
   - OpenBSD:
     - System Management:
       - Install on APU4D4: openbsd/system-management/apu4d4.md
@@ -45,6 +45,7 @@ nav:
     - ZFS:
       - ZFS Encryption: freebsd/zfs/zfs-encryption.md
       - ZFS Raid-1: freebsd/zfs/zfs-raid-1.md
+      - Resize dataset: freebsd/zfs/resize-dataset.md
     - Network:
       - VRF: freebsd/network/vrf.md
       - Setup UCARP: freebsd/network/setup-ucarp.md
