--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
   - GNU/Linux:
     - System Management:
       - Install ArchLinux: linux/system-management/install-arch.md
+      - Upgrade Debian Sid: linux/system-management/upgrade-debian-sid.md
       - Resize disk and part: linux/system-management/resize-disk-part.md
       - Chroot: linux/system-management/chroot.md
     - Install:
