feat(freebsd): add own root ca

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ nav:
       - Ports collection: freebsd/system-management/ports-collection.md
       - Upgrade: freebsd/system-management/upgrade.md
       - Get src from git: freebsd/system-management/get-src.md
+      - Add own root CA: freebsd/system-management/add-own-rootca.md
     - ZFS:
       - ZFS Encryption: freebsd/zfs/zfs-encryption.md
       - ZFS Raid-1: freebsd/zfs/zfs-raid-1.md
